src/objects/AuctionSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Holds all settings used in Auctions that the user is able to modify for their organization.</description>
    <fields>
        <fullName>Allow_Duplicate_Bid_Numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to disable the trigger that enforces unique Bid Numbers for each attendee per Auction.      NOTE: It is recommended that only one member of a Household should be given a Bid Number, and that this setting remain unchecked.</inlineHelpText>
        <label>Allow Duplicate Bid Numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auction_Receipts_Footer_1__c</fullName>
        <defaultValue>&quot;&lt;b&gt;Thank you!&lt;/b&gt;&quot;</defaultValue>
        <description>HTML Text to display below the table of Auction purchases.</description>
        <inlineHelpText>HTML Text to display below the table of purchases on the Auction Receipts report. Auction Receipts Footer 1 and Auction Receipts Footer 2 give you a combined length of 510 characters.</inlineHelpText>
        <label>Auction Receipts Footer 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auction_Receipts_Footer_2__c</fullName>
        <description>HTML Text to display below the table of Auction purchases.</description>
        <inlineHelpText>HTML Text to display below the table of purchases on the Auction Receipts report. Auction Receipts Footer 1 and Auction Receipts Footer 2 give you a combined length of 510 characters.</inlineHelpText>
        <label>Auction Receipts Footer 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auction_Receipts_Intro_1__c</fullName>
        <defaultValue>&quot;&lt;b&gt;Thank you&lt;/b&gt; for attending our auction!&amp;nbsp;&amp;nbsp;Here is an itemized list of the items you purchased, and their potential tax deduction.&quot;</defaultValue>
        <description>Introductory HTML text on the Auction Receipts report.</description>
        <inlineHelpText>Introductory HTML text on the Auction Receipts report.   Auction Receipts Intro 1 and Auction Receipts Intro 2 give you a combined length of 510 characters.</inlineHelpText>
        <label>Auction Receipts Intro 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auction_Receipts_Intro_2__c</fullName>
        <description>Introductory HTML text on the Auction Receipts report.</description>
        <inlineHelpText>Introductory HTML text on the Auction Receipts report. Auction Receipts Intro 1 and Auction Receipts Intro 2 give you a combined length of 510 characters.</inlineHelpText>
        <label>Auction Receipts Intro 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Status_Default__c</fullName>
        <defaultValue>&quot;In Progress&quot;</defaultValue>
        <inlineHelpText>The Campaign Status value to set for the Auction&apos;s auto-created campaigns.</inlineHelpText>
        <label>Campaign Status Default</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Receipts_URL__c</fullName>
        <inlineHelpText>unused.</inlineHelpText>
        <label>Unused3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Household_Field__c</fullName>
        <inlineHelpText>The developer name of a lookup field to households on Contacts.  If using the Non Profit Starter Pack, Auctions will automatically use npo02__Household__c.  If using Accounts for householding, specify AccountId.</inlineHelpText>
        <label>Contact Household Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Household_Greeting_Field__c</fullName>
        <inlineHelpText>The developer path name to the informal greeting field on households from Contact. If using the Non Profit Starter Pack, Auctions will automatically use npo02__Household__r.npo02__Informal_Greeting__c.  Used by the Auction Receipts page.</inlineHelpText>
        <label>Contact Household Greeting Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Household_Name_Field__c</fullName>
        <inlineHelpText>The developer path name to the name field on households from Contact. If using the Non Profit Starter Pack, Auctions will automatically use npo02__Household__r.Name. If using Accounts for householding, specify Account.Name.</inlineHelpText>
        <label>Contact Household Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCardChargeURLFormula__c</fullName>
        <description>A URL that invokes the virtual terminal of a credit card processor to charge their credit card. The guest&apos;s contactId will be substituted into the URL wherever you have {0}. The amount to charge will be substituted wherever you have {1}.  See the Installation &amp; Configuration Guide for IATS and Click &amp; Pledge examples.</description>
        <inlineHelpText>A URL that invokes the virtual terminal of a credit card processor to charge their credit card.  See the Installation &amp; Configuration Guide for IATS and Click &amp; Pledge examples.</inlineHelpText>
        <label>Credit Card Charge URL Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditCardValidateURLFormula__c</fullName>
        <description>A URL that invokes the virtual terminal of a credit card processor to capture and validate their credit card info.  See the Installation &amp; Configuration Guide for IATS and Click &amp; Pledge examples.</description>
        <inlineHelpText>A URL that invokes the virtual terminal of a credit card processor to capture and validate their credit card info.  See the Installation &amp; Configuration Guide for IATS and Click &amp; Pledge examples.</inlineHelpText>
        <label>Credit Card Validate URL Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donated_Item_Converter_Batch_Size__c</fullName>
        <defaultValue>25</defaultValue>
        <inlineHelpText>The batch size of new Auction Item rows to display in the Donated Item Converter page  at a time.</inlineHelpText>
        <label>Donated Item Converter Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donated_Item_Opportunity_Stages__c</fullName>
        <inlineHelpText>no longer used.</inlineHelpText>
        <label>Unused2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Purchase_Grid_Rows__c</fullName>
        <defaultValue>15</defaultValue>
        <inlineHelpText>The number of empty rows to display in the New Auction Purchases Wizard.</inlineHelpText>
        <label>Number of Purchase Grid Rows</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Records_Per_Page__c</fullName>
        <defaultValue>25</defaultValue>
        <inlineHelpText>Specifies how many records to display per page on the Auction related tabs.</inlineHelpText>
        <label>Number of Records Per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Check_Number_Field__c</fullName>
        <inlineHelpText>The full developer name of a Check Number field on Opportunity, that the Check Out page and New Ticket Wizard should save the Check Number into. If using the Non Profit Starter Pack and Payments, this data will automatically be saved in the Payment.</inlineHelpText>
        <label>Opportunity Check Number Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Gift_Donor_Role__c</fullName>
        <defaultValue>&quot;Individual Donor&quot;</defaultValue>
        <inlineHelpText>The OpportunityContactRole to use for donations by individuals.</inlineHelpText>
        <label>Opportunity Gift Donor Role</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Gift_Org_Donor_Role__c</fullName>
        <defaultValue>&quot;Organizational Donor&quot;</defaultValue>
        <inlineHelpText>The OpportunityContactRole to use for donations from Organizations.</inlineHelpText>
        <label>Opportunity Gift Org Donor Role</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Payment_Method_Field__c</fullName>
        <inlineHelpText>The full developer name of a Payment Method field on Opportunity, that the Check Out page and New Ticket Wizard should save the Payment Method into.  If using the Non Profit Starter Pack and Payments, this data will automatically be saved in Payment.</inlineHelpText>
        <label>Opportunity Payment Method Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Gift__c</fullName>
        <defaultValue>&quot;GW Auction Purchased Item&quot;</defaultValue>
        <inlineHelpText>The Opportunity record type to use for straight cash gifts/donations.</inlineHelpText>
        <label>Opportunity Record Type Gift</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Pledged__c</fullName>
        <defaultValue>&quot;Pledged&quot;</defaultValue>
        <inlineHelpText>The opportunity status for auction purchases that are pledged, but not yet paid.</inlineHelpText>
        <label>Opportunity Stage Pledged</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Won_Not_Thanked__c</fullName>
        <defaultValue>&quot;Closed Won - Not Thanked&quot;</defaultValue>
        <inlineHelpText>How to mark the status of opportunities that are paid, but haven&apos;t yet had a thank you sent.</inlineHelpText>
        <label>Opportunity Stage Won Not Thanked</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Processor_Page_Height__c</fullName>
        <defaultValue>&quot;250px&quot;</defaultValue>
        <description>If &quot;Show Payment Processor On Page&quot; is checked, this field will be used for the height of the area to display the payment processor&apos;s terminal.  It should be a number followed by either px or % to represent pixels or percentage of total page height.  Used by the Check In page,  Check Out page and the New Ticket Wizard page.</description>
        <inlineHelpText>If &quot;Show Payment Processor On Page&quot; is checked, this field will be used for the height of the area to display the payment processor&apos;s terminal.  It should be a number followed by either px or % to represent pixels or percentage of total page height.</inlineHelpText>
        <label>Payment Processor Page Height</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Processor_Window_Parameters__c</fullName>
        <defaultValue>&quot;menubar=0,status=0,toolbar=0,width=700,height=700&quot;</defaultValue>
        <description>Used by the Check In page, Check Out page, and the New Ticket Wizard page.</description>
        <inlineHelpText>If &quot;Show Payment Processor On Page&quot; is not checked, we use this string of comma separated parameter values to the javascript window.open() method, that is used when displaying the Payment Processor Virtual Terminal in the Check In ahd Check Out pages.</inlineHelpText>
        <label>Payment Processor Window Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set_Account_On_New_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set, then Auctions will set the Account field on newly created Auction related Opportunities (Donated Items, Tickets, and Purchases).  If you are using the Non Profit Starter Pack and the 1-to-1 Account model, Auctions will automatically do this.</inlineHelpText>
        <label>Set Account On New Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Payment_Processor_On_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the payment processor&apos;s terminal will be shown within the Auction page.  If not checked, the terminal will display in a new browser window or tab.  Used by the Check In page, Check Out page, and the New Ticket Wizard page.</description>
        <inlineHelpText>If checked, the payment processor&apos;s terminal will be shown within the Auction page.  If not checked, the terminal will display in a new browser window or tab.  Used by the Check In page, Check Out page, and the New Ticket Wizard page.</inlineHelpText>
        <label>Show Payment Processor On Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Opportunity_Stages__c</fullName>
        <inlineHelpText>no longer used.</inlineHelpText>
        <label>Unused1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AuctionSettings</label>
</CustomObject>